simple_calculator.ipynb

--- a/simple_calculator.ipynb
+++ b/simple_calculator.ipynb
@@ -55,7 +55,7 @@
     "                print(f\"Result: {num1} / {num2} = {result}\")\n",
     "        else:\n",
     "            print(\"Invalied choice! please select  a valid option. \")\n",
-    "if __name__== \"_main_\":\n",
+    "if __name__== \"__main__\":\n",
     " main()       "
    ]
   }
