--- a/strings.ipynb
+++ b/strings.ipynb
@@ -11,7 +11,9 @@
     "1.Write a Python program to reverse a given string (e.g., \"hello\" →\"olleh\"). \"\"\"\n",
     "# 1. Reverse string\n",
     "s = \"hello\"\n",
-    "print(s[::-1])"
+    "print(s[::-1])\n",
+    "\n",
+    "print(s)"
    ]
   },
   {
