periodic_table_project.ipynb

--- a/periodic_table_project.ipynb
+++ b/periodic_table_project.ipynb
@@ -144,14 +144,14 @@
     "    element = periodic_table.get(atomic_number)\n",
     "\n",
     "    if element:\n",
-    "        print(f\"\\n🔬 Element Information\")\n",
+    "        print(f\"\\n Element Information\")\n",
     "        print(f\"Name         : {element['name']}\")\n",
     "        print(f\"Symbol       : {element['symbol']}\")\n",
     "        print(f\"Atomic Mass  : {element['atomic_mass']}\")\n",
     "    else:\n",
-    "        print(\"⚠️ Invalid atomic number. Please enter a number from 1 to 118.\")\n",
+    "        print(\"Invalid atomic number. Please enter a number from 1 to 118.\")\n",
     "except ValueError:\n",
-    "    print(\"❌ Please enter a valid number.\")"
+    "    print(\"Please enter a valid number.\")"
    ]
   }
  ],
